--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: black; color: white">
+  <body style="background-color: #333435; color: white">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="background-color: black;"></div>
+    <div id="root" style="background-color: #333435;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
